messaging_app/kubeservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: messaging-app-svc
  labels:
    app: messaging-app
spec:
  type: ClusterIP
  selector:
    app: messaging-app
    version: blue
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
      name: http
