messaging_app/ingress.yaml
# messaging_app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: messaging-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: messaging.local
      http:
        paths:
          # Root path -> messaging app service
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: messaging-app-svc
                port:
                  number: 8000
          # /api -> (same service here, change if you have separate API service)
          - path: /api/(.*)
            pathType: Prefix
            backend:
              service:
                name: messaging-app-svc
                port:
                  number: 8000
